# LLM_Agent_Orchestration_HW4

./: .env.example  .gitignore  HW4_Project_Mission.md  LICENSE  MANIFEST.in  Missions_Route_Enrichment_Tour_Guide_System.md  PRD_Route_Enrichment_Tour_Guide_System.md  PROGRESS_TRACKER.md  README.md  pyproject.toml  submission_guidelines_summary.md
.claude/agents/: README.md  video_agent.md
config/: run1.yaml  run2.yaml  run3.yaml  run_live_fix.yaml  run_llm_judge.yaml  run_sequential.yaml  settings.yaml
custom_output_test/: my_custom_run.csv  my_custom_run.md
custom_output_test/checkpoints/demo_boston_mit/: 00_route.json  01_scheduler_queue.json  02_agent_search_knowledge_step_1.json  02_agent_search_knowledge_step_2.json  02_agent_search_knowledge_step_3.json  02_agent_search_knowledge_step_4.json  02_agent_search_song_step_1.json  02_agent_search_song_step_2.json  02_agent_search_song_step_3.json  02_agent_search_song_step_4.json  02_agent_search_video_step_1.json  02_agent_search_video_step_2.json  02_agent_search_video_step_3.json  02_agent_search_video_step_4.json  03_agent_fetch_knowledge_step_1.json  03_agent_fetch_knowledge_step_2.json  03_agent_fetch_knowledge_step_3.json  03_agent_fetch_knowledge_step_4.json  03_agent_fetch_song_step_1.json  03_agent_fetch_song_step_2.json  03_agent_fetch_song_step_3.json  03_agent_fetch_song_step_4.json  03_agent_fetch_video_step_1.json  03_agent_fetch_video_step_2.json  03_agent_fetch_video_step_3.json  03_agent_fetch_video_step_4.json  04_judge_decision_step_1.json  04_judge_decision_step_2.json  04_judge_decision_step_3.json  04_judge_decision_step_4.json  05_final_output.json
docs/: api_reference.md  cost_analysis.md  research_plan.md
docs/analysis/: results.ipynb
docs/architecture/: adr_register.md  c4_diagrams.md
docs/contracts/: agent_result_schema.json  judge_decision_schema.json  route_schema.json  task_schema.json
docs/prompt_log/: 001_architecture_design_session.md  2025-05-09_route_provider.md  2025-05-09_testing_framework.md  2025-05-09_walking_skeleton.md  agents_system_design_prompt.md  orchestrator_prompt.md
docs/quality/: iso_25010_assessment.md
docs/screenshots/: GALLERY_TEMPLATE.md
docs/ux/: heuristics.md
output/study_baseline/logs/: metrics.json
output/study_fast/logs/: metrics.json
output/study_live/logs/: metrics.json
output/study_llm_judge/logs/: metrics.json
output/study_sequential/logs/: metrics.json
scripts/: check_api_usage.py  check_readme.py  check_scheduler_interval.py  create_full_notebook.py  diagnose_llm_query_generation.py  preflight.py  verify_log_count.py
src/hw4_tourguide/: __init__.py  __main__.py  config_loader.py  file_interface.py  judge.py  logger.py  orchestrator.py  output_writer.py  route_provider.py  scheduler.py  stub_agents.py  stub_route_provider.py  validators.py
src/hw4_tourguide/agents/: __init__.py  base_agent.py  knowledge_agent.py  song_agent.py  video_agent.py
src/hw4_tourguide/config/: settings.yaml
src/hw4_tourguide/tools/: __init__.py  circuit_breaker.py  fetch.py  (+7 more)
tests/: conftest.py  test_agent_llm_queries.py  test_agent_metrics.py  test_agent_secondary.py  test_base_agent.py  test_circuit_breaker.py  test_cli.py  test_cli_entry.py  test_cli_parser.py  test_clients_coverage.py  test_concurrency.py  test_config_loader.py  test_file_interface.py  test_file_interface_errors.py  test_integration.py  test_json_extraction.py  test_judge.py  test_knowledge_agent.py  test_knowledge_agent_authority.py  test_live_clients.py  test_llm.py  test_logging.py  test_logging_enhancements.py  test_metrics_collector.py  test_orchestrator.py  test_output_writer.py  test_prompt_loader.py  test_resilience.py  test_route_provider.py  test_route_provider_errors.py  test_route_provider_live.py  test_sample_framework.py  test_scheduler.py  test_search_fetch.py  test_song_agent.py  test_song_agent_mood.py  test_song_fallback.py  test_stub_route_provider.py  test_utils.py  test_validator.py  (+3 more)
tests/mocks/: mock_route_provider.py
(+4 files in other folders)
